// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RelatedArticle> default 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa YuEc"
    >
      <div
        class="heading"
      >
        Heading
      </div>
      <nav>
        <relatedarticle
          headline="headline1"
          image="https://image1.jpg"
          label="label1"
          link="https://link1"
          sectioncolour="red"
        />
        <relatedarticle
          headline="headline2"
          image="https://image2.jpg"
          label="label2"
          link="https://link2"
          sectioncolour="red"
        />
        <relatedarticle
          headline="headline3"
          image="https://image3.jpg"
          label="label3"
          link="https://link3"
          sectioncolour="red"
        />
      </nav>
    </div>
  </div>
</body>
`;

exports[`<RelatedArticle> no images 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa YuEc"
    >
      <div
        class="heading"
      >
        Heading
      </div>
      <nav>
        <relatedarticle
          headline="headline1"
          label="label1"
          link="https://link1"
          sectioncolour="red"
        />
        <relatedarticle
          headline="headline2"
          label="label2"
          link="https://link2"
          sectioncolour="red"
        />
        <relatedarticle
          headline="headline3"
          label="label3"
          link="https://link3"
          sectioncolour="red"
        />
      </nav>
    </div>
  </div>
</body>
`;

exports[`<RelatedArticle> single article 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa YuEc"
    >
      <div
        class="heading"
      >
        Heading
      </div>
      <nav>
        <singlerelatedarticle
          headline="headline1"
          image="https://image1.jpg"
          label="label1"
          link="https://link1"
          sectioncolour="red"
        />
      </nav>
    </div>
  </div>
</body>
`;

exports[`<RelatedArticle> single article no image 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa YuEc"
    >
      <div
        class="heading"
      >
        Heading
      </div>
      <nav>
        <singlerelatedarticle
          headline="headline1"
          label="label1"
          link="https://link1"
          sectioncolour="red"
        />
      </nav>
    </div>
  </div>
</body>
`;
